force-app/main/default/objects/Department_Objective__c/fields/Department_Objective__c.field-meta.xml
<CustomField>
    <fullName>Department_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Practice Group Objective</description>
    <inlineHelpText>Does this objective map to a Practice Group Objective?</inlineHelpText>
    <label>Department Objective</label>
    <referenceTo>Department_Objective__c</referenceTo>
    <relationshipLabel>Department Objectives</relationshipLabel>
    <relationshipName>Department_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>