force-app/main/default/objects/Department_Objective__c/fields/Department_Objective_Number__c.field-meta.xml
<CustomField>
    <fullName>Department_Objective_Number__c</fullName>
    <description>This is an auto-generated unique number for this objective.</description>
    <displayFormat>Department-{00000}</displayFormat>
    <inlineHelpText>This is an auto-generated unique number for this objective.</inlineHelpText>
    <label>Department Objective Number</label>
    <type>AutoNumber</type>
</CustomField>