force-app/main/default/objects/Department_Objective__c/fields/Department_Objective_Owner__c.field-meta.xml
<CustomField>
    <fullName>Department_Objective_Owner__c</fullName>
    <description>Who is responsible for reporting on this Department Objective?</description>
    <inlineHelpText>Who is responsible for reporting on this Department Objective?</inlineHelpText>
    <label>Department Objective Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>