force-app/main/default/objects/Department_Objective__c/fields/Related_Practice_Group_Objective__c.field-meta.xml
<CustomField>
    <fullName>Related_Practice_Group_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Does this objective map to a Practice Group Objective?</description>
    <inlineHelpText>Does this objective map to a Practice Group Objective?</inlineHelpText>
    <label>Related Practice Group Objective</label>
    <referenceTo>Department_Objective__c</referenceTo>
    <relationshipLabel>Department Objectives (Related Practice Group Objective)</relationshipLabel>
    <relationshipName>Department_Objectives1</relationshipName>
    <type>Lookup</type>
</CustomField>